fixed profile pic on mobile

--- a/style/minimal.css
+++ b/style/minimal.css
@@ -54,7 +54,11 @@ sup {
  top:-.5em
 }
 img {
- border-style:none
+ border-style:none;
+ display: block;
+ margin-left: auto;
+ margin-right: auto;
+ z-index: 1;
 }
 button,
 input,
